crates/swc_ecma_react_compiler/tests/fixtures/upstream/preserve-memo-validation/error.useMemo-unrelated-mutation-in-depslist/error.txt
Found 1 error:

Error: Found missing memoization dependencies

Missing dependencies can cause a value to update less often than it should, resulting in stale UI.

error.useMemo-unrelated-mutation-in-depslist.ts:18:14
  16 |   const memoized = useMemo(() => {
  17 |     return [y];
> 18 |   }, [(mutate(x), y)]);
     |               ^ Missing dependency `x`
  19 |
  20 |   return [x, memoized];
  21 | }

Inferred dependencies: `[x, y]`
